Actualización del proyecto

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <div class="container"><a class="navbar-brand logo" href="#">Adaptación y estilo con Bootstrap</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="/index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/projects-grid-cards.html">Proyectos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/cv.html">CV</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/contacto.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/about-me-bootstrap-/index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/about-me-bootstrap-/projects-grid-cards.html">Proyectos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/about-me-bootstrap-/cv.html">CV</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/about-me-bootstrap-/contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
